--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <!--configura a codificação de caracteres no documento, UFT-8 é uma codificação de caracteres que pode representar quase todos os caracteres e símbolos do mundo -->
 
-    <meta http-equiv="X-UA-Compatible"content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Isso permite que a pagina seja compativel coma internet explore-->
-    
-    <meta name="viewport"content="width=device-width, initial-scale=1.0">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--A tag viewport, que é essencial para o desing responsivo de sites .
     Define a largura da página para ser igual à largura da tela do dispositivo.Um valor de 1.0 significa que a página será exibida sem zoom.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,12 +37,64 @@
     <div class="navegação">
         <div id="cabeca">
             <h1>Olá, meu nome é Luiz</h1>
-            <p class="texto">Sou programador e gostaria de apresentar meu trabalho para você através deste portfólio.</p>
+            <p class="texto">Sou programador e gostaria de apresentar meu trabalho para você através deste portfólio.
+            </p>
+            <a id="buttoncta" href="#services">Meus serviços</a>
         </div>
 
         <div id="foto">
             <img src="Img/luiz.jpg">
         </div>
+    </div>
+    <div class="navegação" id="clientes">
+        <div id="cabecalhoclientetexto">
+            <p>Conheça <br>
+                Meus clientes</p>
+
+        </div>
+        <div id="cabecalhoclientelogo">
+            <img width="100" src="img/apple-11 1.png">
+        </div>
+        <div id="cabecalhoclientelogo">
+            <img width="100" src="img/slack-2 1.png">
+        </div>
+        <div id="cabecalhoclientelogo">
+            <img width="100" src="img/spotify-1 1.png">
+        </div>
+
+    </div>
+    <div class="navegação">
+        <div id="serviços">
+            <h2 id="red">Conheça</h2>
+            <h2 id="Black">Meus serviços</h2>
+
+        </div>
+    </div>
+    <div class="navegação">
+        <p class="gray">Vou ajudar a sua empresa a <br>
+            alçalcar grandes resultados</p>
+    </div>
+    <div class="navegação">
+        <div id="cabecalhoclientelogo"> <img width="80" src="Img/Group 21.png">
+            <h3 id="texto"> Consultoria</h3>
+            <p id="texto2"> Te ajudo a organizar sua empresa
+                e melhorar seus resultados.</p>
+
+        </div>
+        <div id="cabecalhoclientelogo"> <img width="80" src="Img/Group 17.png">
+            <h3 id="texto"> Email Marketing</h3>
+            <p id="texto2"> Gerenciar campanhas é difícil.
+                Conte comigo para te ajudar.</p>
+        </div>
+
+        <div id="cabecalhoclientelogo"> <img width="80" src="Img/Group 19.png">
+            <h3 id="texto"> Criação de Sites</h3>
+            <p id="texto2">Desenvolvo seu site inteiro
+                do zero e te entrego prontinho. </p>
+        </div>
+    </div>
+
+
 
 </body>
 
