--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -77,22 +77,52 @@
     <div class="navegação">
         <div id="cabecalhoclientelogo"> <img width="80" src="Img/Group 21.png">
             <h3 id="texto"> Consultoria</h3>
-            <p id="texto2"> Te ajudo a organizar sua empresa
+            <p class="gray" id="texto2"> Te ajudo a organizar sua empresa
                 e melhorar seus resultados.</p>
 
         </div>
         <div id="cabecalhoclientelogo"> <img width="80" src="Img/Group 17.png">
             <h3 id="texto"> Email Marketing</h3>
-            <p id="texto2"> Gerenciar campanhas é difícil.
+            <p class="gray" id="texto2"> Gerenciar campanhas é difícil.
                 Conte comigo para te ajudar.</p>
         </div>
 
         <div id="cabecalhoclientelogo"> <img width="80" src="Img/Group 19.png">
             <h3 id="texto"> Criação de Sites</h3>
-            <p id="texto2">Desenvolvo seu site inteiro
+            <p class="gray" id="texto2">Desenvolvo seu site inteiro
                 do zero e te entrego prontinho. </p>
         </div>
     </div>
+    <div class="navegação">
+        <div>
+            <img src="Img/Group 26.png" alt="">
+        </div>
+        <div id="contactform">
+            <h2 id="red">Economize seu tempo</h2>
+            <h1 id="Black">Ganhe mais dinheiro</h1>
+            <p class="gray">Digite seu seu endereço de e-mail.
+                <br>Eu entrarei em contato para fornecer
+                <br>um diagnóstico gratuito.
+            </p>
+            <form action="https://formspree.io/f/xdkndnbv" method="post">
+                <input placeholder="Seu e-mail" type="text" id="emailimput" name="contactEmail" required="required">
+                <p>
+                    <button type="submit">Enviar</button>
+                </p>
+            </form>
+        </div>
+
+    </div>
+    <div>
+        <h2 id="red2">Conheça meu trabalho</h2>
+        <h1 id="Black2">Protifolio</h1>
+    </div>
+    <div class="navegação">
+        <img width="300" src="Img/bexer-bootstrap-business-template 1.png" >
+        <img width="300" src="Img/modelo-de-site-corporativo-responsivo-gratuito_52524-0-original 1.png">
+        <img width="300" src="Img/modelo-gratuito-de-site-responsivo-para-negocios_55108-0-original 1.png">
+    </div>
+
 
 
 
